:construction: 뉴스 예외 처리 및 코드 컨밴션 준수