@@ -1,24 +1,23 @@
 package com.hanahakdangserver.news.service;
 
+import com.hanahakdangserver.news.entity.News;
+import com.hanahakdangserver.news.enums.NewsExceptionEnum;
+import com.hanahakdangserver.news.repository.NewsRepository;
+import com.hanahakdangserver.news.dto.NewsResponse;
+
 import lombok.RequiredArgsConstructor;
-import org.springframework.scheduling.annotation.Async;
-import org.springframework.scheduling.annotation.EnableAsync;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 import org.springframework.web.reactive.function.client.WebClient;
 
 import java.time.LocalDateTime;
 import java.time.format.DateTimeFormatter;
+import java.time.format.DateTimeParseException;
 import java.util.ArrayList;
 import java.util.List;
 import java.util.Map;
+import java.util.stream.Collectors;
 
-import com.hanahakdangserver.news.dto.NewsResponse;
-import com.hanahakdangserver.news.entity.News;
-import com.hanahakdangserver.news.repository.NewsRepository;
-
-
-@EnableAsync
 @Service
 @RequiredArgsConstructor
 @Transactional(readOnly = true)
@@ -27,39 +26,58 @@ public class NewsService {
   private final NewsRepository newsRepository;
   private final WebClient webClient;
 
-  // Flask에서 데이터 가져오기
   private List<Map<String, String>> fetchNewsFromPython() {
-    return webClient.get().uri("/news")
-        .retrieve()
-        .bodyToMono(List.class)
-        .block();
+    try {
+      return webClient.get()
+          .uri("/news")
+          .retrieve()
+          .bodyToMono(List.class)
+          .block();
+    } catch (Exception e) {
+      throw NewsExceptionEnum.NEWS_FETCH_FAILED.createResponseStatusException();
+    }
   }
 
-  @Async
-  @Transactional(readOnly = false)
+  @Transactional
   public void saveNewsFromPython() {
     List<Map<String, String>> articles = fetchNewsFromPython();
-    DateTimeFormatter formatter = DateTimeFormatter.ofPattern("yyyy.MM.dd HH:mm");
+    if (articles == null || articles.isEmpty()) {
+      throw NewsExceptionEnum.NEWS_FETCH_FAILED.createResponseStatusException();
+    }
 
+    DateTimeFormatter formatter = DateTimeFormatter.ofPattern("yyyy.MM.dd HH:mm");
     List<News> newsList = new ArrayList<>();
     for (Map<String, String> article : articles) {
-      LocalDateTime createdAt = LocalDateTime.parse(article.get("date"), formatter);
-      News news = News.builder()
-          .title(article.get("title"))
-          .content(article.get("content"))
-          .newsUrl(article.get("newsUrl"))
-          .newsThumbnailUrl(article.get("newsThumbnailUrl"))
-          .createdAt(createdAt)
-          .build();
-      newsList.add(news);
+      try {
+        LocalDateTime createdAt = LocalDateTime.parse(article.get("date"), formatter);
+        News news = News.builder()
+            .title(article.get("title"))
+            .content(article.get("content"))
+            .newsUrl(article.get("newsUrl"))
+            .newsThumbnailUrl(article.get("newsThumbnailUrl"))
+            .createdAt(createdAt)
+            .build();
+        newsList.add(news);
+      } catch (DateTimeParseException e) {
+        throw NewsExceptionEnum.INVALID_DATE_FORMAT.createResponseStatusException();
+      }
     }
-    newsRepository.saveAll(newsList);
+
+    try {
+      newsRepository.saveAll(newsList);
+    } catch (Exception e) {
+      throw NewsExceptionEnum.NEWS_SAVE_FAILED.createResponseStatusException();
+    }
+
   }
 
-  // 데이터베이스에서 모든 뉴스 조회
-  @Transactional(readOnly = true)
   public List<NewsResponse> getAllNews() {
-    return newsRepository.findAll().stream()
+    List<News> newsList = newsRepository.findAll();
+    if (newsList.isEmpty()) {
+      throw NewsExceptionEnum.NO_NEWS_FOUND.createResponseStatusException();
+    }
+
+    return newsList.stream()
         .map(news -> NewsResponse.builder()
             .id(news.getId())
             .title(news.getTitle())
@@ -68,6 +86,6 @@ public class NewsService {
             .newsThumbnailUrl(news.getNewsThumbnailUrl())
             .createdAt(news.getCreatedAt().toString())
             .build())
-        .toList();
+        .collect(Collectors.toList());
   }
 }
